# data-platform

./: .dockerignore  .env.example  .gitignore  Backlog.md  CLAUDE.md  Justfile  Learnings.md  Progress.md  README.md  Roadmap.md  Walkthrough_Metadata_Ingestion.md  Walkthrough_Metadata_Source_Feed.md  Walkthrough_New_Feed.md  Walkthrough_New_Streaming_Source.md  docker-compose.yml  pyproject.toml
dbt/: module.just
dbt/_shared/: dbt_project.yml
dbt/_shared/macros/: generate_schema_name.sql  row_hashes.sql
dbt/data_platform/: dbt_project.yml  pyproject.toml
dbt/data_platform/macros/: insert_update_split.sql  row_hashes.sql
dbt/data_platform/models/model/: schema.yml
dbt/data_platform/models/staging/: _sources.yml  schema.yml  stg_customers.sql  stg_financial_transactions.sql  stg_sales.sql  (+1 more)
dbt/data_platform/profiles/: .user.yml  profiles.yml
dbt/data_platform/snapshots/: dim_customer_snapshot.sql
dbt/domains/metadata/: dbt_project.yml
dbt/domains/police_crimes/: dbt_project.yml
dbt/domains/sales/: dbt_project.yml
domain_naming/: pyproject.toml
domain_naming/domain_naming/: __init__.py
frontend/: DebugReference.md  Dockerfile  app.py  dagster_wake.py  metadata_db.py  module.just  pyproject.toml
frontend/k8s/: deployment.yaml  postgres-credentials-secret.yaml  postgres-credentials-secret.yaml.example  service.yaml  serviceaccount.yaml
frontend/pages/: 1_Source_Systems.py  2_Data_Feeds.py  3_Lakehouse_Models.py  3_Model_Feeds.py  4_Ingestion_Triggers.py  4_Streaming_Sources.py  5_Trigger_Pipeline.py
frontend/tests/: test_dagster_wake.py  test_metadata_db.py  test_trigger_pipeline_page.py
metadata/: DataModel.md  DebugReference.md  module.just
metadata/db/init/: 01_platform_metadata.sql  02_polaris_db.sql  03_dagster_db.sql
metadata/k8s/: secret.yaml  secret.yaml.example  service.yaml  statefulset.yaml
orchestration/: DebugReference.md  Dockerfile  module.just
orchestration/dagster_data_platform/: pyproject.toml
orchestration/dagster_data_platform/dagster_data_platform/: dagster_launch.py  definitions.py  pipeline_steps.py  raw_storage.py  trigger_master_pipeline.py  trigger_schedule_run.py  verify_sensor_trigger.py  wake_sleep_sensor.py
orchestration/dagster_data_platform/dagster_data_platform/assets/: dbt_assets.py  extraction_assets.py  financial_assets.py  metadata_runs_assets.py  police_assets.py  sales_assets.py
orchestration/dagster_data_platform/dagster_data_platform/connectors/: police_crimes_connector.py
orchestration/dagster_data_platform/dagster_data_platform/resources/: iceberg_resource.py  postgres_metadata_resource.py  trino_resource.py
orchestration/dagster_data_platform/tests/: test_dbt_assets.py  test_pipeline_steps.py  test_police_crimes_connector.py  test_schedules.py  test_sensors.py  test_wake_sleep_sensor.py
orchestration/dagster_home/: dagster.yaml
orchestration/k8s/: code-server-deployment.yaml  code-server-service.yaml  daemon-deployment.yaml  keda-scaledobjects.yaml  postgres-credentials-secret.yaml  postgres-credentials-secret.yaml.example  rbac-frontend-wake.yaml  rbac.yaml  webserver-deployment.yaml  webserver-service.yaml
platform/: DebugReference.md  module.just
platform/kind/: kind-cluster.yaml
platform/namespaces/: metadata.yaml  query-engine.yaml
processing/: module.just
processing/connectors/: pyproject.toml
processing/connectors/connectors/: __init__.py  base.py  csv.py  inference.py  json_file.py  postgres.py  rest.py  schema_registry_sync.py
processing/connectors/tests/: test_inference.py  test_postgres.py  test_schema_registry_sync.py
processing/raw_to_clean/: pyproject.toml
processing/raw_to_clean/raw_to_clean/: __init__.py  catalog.py  schema_evolution.py  schema_validation.py  write.py
processing/raw_to_clean/tests/: test_schema_evolution.py  test_schema_validation.py
query-engine/: DebugReference.md  module.just
query-engine/minio/: create-bucket-job.yaml  deployment.yaml  module.just  pvc.yaml  secret.yaml  secret.yaml.example  service.yaml
query-engine/polaris/: bootstrap-job.yaml  deployment.yaml  module.just  register-catalog.sh  secret.yaml  secret.yaml.example  service.yaml
query-engine/polaris_client/: pyproject.toml
query-engine/polaris_client/polaris_client/: __init__.py  bootstrap.py  client.py  port_forward.py
query-engine/trino/: module.just  values.yaml
scripts/: bootstrap_kind.sh  check_model_feed_tags.py  generate_dagster_pipeline.py  generate_deletion_synthesis_views.py  generate_domain_projects.py  generate_financial_reports.py  generate_model_scaffolds.py  generate_ods_models.py  generate_serve_views.py  generate_sources.py  generate_streaming_ingestion.py  generate_streaming_serve_scaffolds.py  pyproject.toml  seed_metadata_db.py
streaming/: DebugReference.md  module.just
streaming/flink/: Dockerfile  flinkdeployment.yaml  module.just
streaming/flink/sql-runner/: pom.xml
streaming/flink/sql-scripts/: sales_events_sink.sql
streaming/kafka/: create-topic-job.yaml  deployment.yaml  module.just  pvc.yaml  service.yaml
streaming/producer/: Dockerfile  module.just  pyproject.toml
streaming/producer/k8s/: deployment.yaml
streaming/producer/producer/: main.py
streaming/testing/: Dockerfile  module.just  pyproject.toml  run.py
tests/integration/: DebugReference.md  conftest.py  module.just  pyproject.toml  test_ods_primary_key_discovery.py  test_utc_consistency.py
(+35 files in other folders)
