[project]
name = "data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
# dbt/data_platform retired (see Roadmap.md "multi-project dbt split") --
# dbt/domains/<domain>/ directories are pure dbt project trees, no
# pyproject.toml/workspace membership of their own (dbt-core/dbt-trino are
# already direct dependencies of orchestration/dagster_data_platform, which
# is what puts `dbt` on PATH both locally and in the Docker image).
members = ["frontend", "query-engine/polaris_client", "orchestration/dagster_data_platform", "processing/raw_to_clean", "processing/connectors", "scripts", "tests/integration"]

[tool.uv]
package = false
# uv's default link-mode ("clone", APFS clonefile()) sets the macOS UF_HIDDEN
# BSD flag on files it installs into .venv/lib/.../site-packages on this
# machine. Python 3.13's site.py added a security check (CPython #113659,
# defending against hidden malicious .pth files) that silently *skips* any
# .pth file with that flag set -- which broke every workspace member's
# editable install (raw_to_clean, polaris_client, dagster_data_platform),
# recurring across this whole project until root-caused. "copy" mode writes
# plain files with no inherited/incidental flags, confirmed via a from-
# scratch rebuild to fix this completely (zero hidden files, zero numbered
# duplicate .pth files, imports work with no `--reinstall-package` dance).
# See Learnings.md for the full investigation.
link-mode = "copy"
