[project]
name = "frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "confluent-kafka>=2.5",
    "connectors",
    "requests>=2.32",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.uv.sources]
connectors = { workspace = true }

[tool.pytest.ini_options]
# frontend is `package = false` -- metadata_db.py is a loose script file,
# not an installed package like raw_to_clean/dagster_data_platform, so it
# needs an explicit sys.path entry for tests/ (a sibling directory) to
# import it.
pythonpath = ["."]
