[project]
name = "dagster-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13",
    "dagster-webserver>=1.13",
    "dagster-dbt>=0.29",
    "dagster-k8s>=0.29",
    "dagster-postgres>=0.29",
    "dbt-core>=1.9",
    "dbt-trino>=1.9",
    "trino>=0.330",
    "psycopg[binary]>=3.2",
    "raw-to-clean",
]

[tool.uv.sources]
raw-to-clean = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.dagster]
module_name = "dagster_data_platform.definitions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_data_platform"]
