[project]
name = "connectors"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30",
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "raw-to-clean",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["connectors"]

[tool.uv.sources]
raw-to-clean = { workspace = true }
