[project]
name = "raw-to-clean"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyiceberg[pyarrow]>=0.9",
    "polars>=1.30",
    "pyarrow>=18",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raw_to_clean"]
