[project]
name = "polaris-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["apache-polaris>=1.6.0", "raw-to-clean"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polaris_client"]

[tool.uv.sources]
raw-to-clean = { workspace = true }
